# context-lens

./: .cursorrules  .gitignore  CLAUDE.md  README.md  README.pt-BR.md  pyproject.toml
.claude/: mcp.json  settings.local.json
.claude/commands/: ctx.md  reindex.md  search.md  setup-lens.md  status.md
.codex/: instructions.md  mcp.json
.continue/: config.json
.cursor/: mcp.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
bench/: benchmark.py  gen_chart.py  proof_savings.py
docs/: chatgpt-codex.md  claude-code.md  continue-dev.md  copilot.md  cursor.md
scripts/: ctx-for-claude.py  lens-codex.py  lens-context.py  lens-setup.py
shell/: ctx-autoload.ps1  ctx-autoload.sh
src/ctx/: __init__.py  analytics.py  cli.py  config.py  errors.py  git.py  health.py  installer.py  log.py  mcp.py
src/ctx/context/: budget.py  builder.py  levels.py  ranking.py
src/ctx/data/: context-lens.vsix
src/ctx/db/: schema.py  store.py
src/ctx/indexer/: extractor.py  hasher.py  parser.py  walker.py
src/ctx/memory/: lite.py
src/ctx/retrieval/: cache.py  intent.py  policy.py  search.py
src/ctx/scripts/: codex.py  context.py  hooks.py  setup.py
tests/: test_automation.py  test_budget.py  test_builder.py  test_config.py  test_detect_tool.py  test_extractor.py  test_indexer.py  test_instructions.py  test_integration.py  test_intent.py  test_large_project.py  test_levels.py  test_search.py  test_setup.py  test_store.py
vscode-context-lens/: .vscodeignore  LICENSE  package-lock.json  package.json
vscode-context-lens/prompts/: lens-instructions.instructions.md
vscode-context-lens/src/: autoContext.test.ts  chatParticipant.ts  claudeParser.test.ts  claudeParser.ts  claudeWatcher.ts  codexParser.test.ts  codexParser.ts  codexSession.test.ts  codexSession.ts  codexWatcher.ts  copilotParser.test.ts  copilotParser.ts  copilotTokenAccuracy.test.ts  copilotWatcher.ts  crossPlatform.test.ts  debounce.test.ts  debounce.ts  extension.ts  integration.test.ts  lensToolProvider.ts  lensWatcher.ts  logParser.test.ts  logParser.ts  orchestrator.test.ts  security.test.ts  sidebarProvider.ts  statusBarItem.ts  toolAvailability.test.ts  toolAvailability.ts  toolOrchestrator.ts  toolStats.test.ts  toolStats.ts  transcriptBuffer.test.ts  transcriptBuffer.ts
