[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-lens"
version = "0.1.0"
description = "Context Lens — lightweight local CLI that indexes your codebase and assembles optimized context for AI coding assistants"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["context-lens", "llm", "context", "tokens", "claude", "copilot", "code-search", "tree-sitter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
parse = [
    "tree-sitter>=0.22",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
]
tokens = ["tiktoken>=0.6"]
dev = ["pytest>=7.0", "pytest-cov"]
all = [
    "tree-sitter>=0.22",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tiktoken>=0.6",
]

[project.scripts]
lens = "ctx.cli:main"
ctx  = "ctx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ctx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
