[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-lens-v2"
version = "2.0.0"
description = "Context Lens — lightweight local CLI that indexes your codebase and assembles optimized context for AI coding assistants"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "TiagoSchr", url = "https://github.com/TiagoSchr" },
]
keywords = ["context-lens", "llm", "context", "tokens", "claude", "copilot", "code-search", "tree-sitter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/TiagoSchr/context-lens"
Repository = "https://github.com/TiagoSchr/context-lens"
Issues = "https://github.com/TiagoSchr/context-lens/issues"

[project.optional-dependencies]
parse = [
    "tree-sitter>=0.25",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
]
tokens = ["tiktoken>=0.6"]
mcp = ["mcp>=1.0,<2.0"]
watch = ["watchdog>=3.0"]
dev = ["pytest>=7.0", "pytest-cov"]
all = [
    "tree-sitter>=0.25",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tiktoken>=0.6",
    "watchdog>=3.0",
]

[project.scripts]
lens     = "ctx.cli:main"
ctx      = "ctx.cli:main"
lens-mcp = "ctx.mcp:main"
lens-setup = "ctx.scripts.setup:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ctx"]

[tool.hatch.build.targets.wheel.force-include]
"src/ctx/data" = "ctx/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
